--- a/Nectaria/page2.html
+++ b/Nectaria/page2.html
@@ -133,8 +133,9 @@
 	<footer class="site-footer clearfix">
 	<a href="#top" id="back-to-top" class="back-top"></a>
 	<div class="text-center">
-		<a href="index.html">Nectaria Template</a> &copy; 2016<br/>
-		Free HTML Template by <a href="https://wowthemes.net">WowThemes.net</a>
+		<a href="https://api.whatsapp.com/send?phone=962785759099&text=Hi%20we%20need%20help%20regarding%20something" target="_blank">
+			+962785759099
+		</a>
 	</div>
 	</footer>
 </div>
